--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-PlayerApp is a generic radio streamer application for the android platform. The goal is to
-create a codebase which can be 'skinned' to fit a client's design needs.
+PlayerApp is a generic radio streamer application for the android platform. The goal is to create a codebase which can be 'skinned' to fit a client's design needs.
